--- a/css/style.css
+++ b/css/style.css
@@ -22,19 +22,7 @@ h1 {
     color: #838383;
 }
 
-.alert-warning {
-    background-color: #ebc063;
-    border-color: #e8b64c;
-    color: #a07415;
-}
-
-.alert-danger {
-    background-color: #e27c79;
-    border-color: #dd6864;
-    color: #9f2723;
-}
-
-.blue {
+.blue-text {
     color: #3086e3;
 }
 
@@ -54,13 +42,10 @@ h1 {
     font-size: 24px;
 }
 
-p.blue {
+p.blue-text {
     border-bottom: 1px solid #d3d3d3;
 }
 
-.red {
-    color: #ed412d;
-}
 
 .alert .close-alert {
     padding: 10px;
@@ -96,64 +81,28 @@ p.blue {
     height: 100%;
 }
 
-/* Optional: Makes the sample page fill the window. */
+/*!* Optional: Makes the sample page fill the window. *!*/
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
 }
 
-.controls {
-    margin-top: 10px;
-    border: 1px solid transparent;
-    border-radius: 2px 0 0 2px;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    height: 32px;
-    outline: none;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-}
-
-#origin-input,
-#destination-input {
-    background-color: #fff;
-    font-family: Roboto;
-    font-size: 15px;
-    font-weight: 300;
-    margin-left: 12px;
-    padding: 0 11px 0 13px;
-    text-overflow: ellipsis;
-    width: 200px;
-}
-
-#origin-input:focus,
-#destination-input:focus {
-    border-color: #4d90fe;
-}
-
-#mode-selector {
-    color: #fff;
-    background-color: #4d90fe;
-    margin-left: 12px;
-    padding: 5px 11px 0px 11px;
-}
-
-#mode-selector label {
-    font-family: Roboto;
-    font-size: 13px;
-    font-weight: 300;
-}
 
 #details {
     position: absolute;
-    left: 20%;
-    top: 6.2em;
+    left: 22%;
+    top: 3%;
     border-radius: 2px;
-    background-color: rgb(255, 255, 255);
     width: 400px;
-    height: 214px;
-    z-index: 5;
+    z-index: 1;
     padding: 0;
+}
+#m-0 {
+    margin: 0;
+}
+div#m-0{
+    background-color: #f2f2f2;
 }
 
 /*button .direction style*/
@@ -161,10 +110,11 @@ html, body {
     position: absolute;
     width: 250px;
     height: 50px;
-    right: 15px;
-    top: 5em;
+    right: 1%;
+    top: 1%;
     background: #3086e3;
     color: #fff;
+    cursor:pointer;
     font-size: 20px;
 }
 
@@ -198,10 +148,22 @@ button {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: #fff;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+    display: block;
+    min-height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    border: none;
+    -webkit-transition: all 0.5s cubic-bezier(0.55, 0, 0.1, 1);
+    -o-transition: all 0.5s cubic-bezier(0.55, 0, 0.1, 1);
+    /* transition: all 0.5s cubic-bezier(0.55, 0, 0.1, 1); */
+}
+.sidebar-nav li {
+    position: relative;
+    list-style-type: none;
 }
 
 .sidenav a {
@@ -228,4 +190,87 @@ button {
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+}
+.sidebar .sidebar-nav li a {
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+    display: block;
+    height: 48px;
+    line-height: 48px;
+    padding: 0;
+    padding-left: 16px;
+    /*padding-right: 56px;*/
+    text-decoration: none;
+    clear: both;
+    font-weight: 500;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    -webkit-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+.sidebar.open {
+    min-width: 280px;
+    width: 280px;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+.sidebar {
+    width: 0;
+    -webkit-transform: translate3d(-280px, 0, 0);
+    transform: translate3d(-280px, 0, 0);
+}
+li{
+    margin: 20px;
+}
+#m-0 {
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+    box-shadow: 0 0 0 0 rgba(0,0,0,0.14), 0 0 0 0 rgba(0,0,0,0.12), 0 2px 0 -4px rgba(0,0,0,0.2);
+}
+div#m-0 {
+    border-bottom: 1px solid #d3d3d3;
+}
+/*mobile style*/
+button.direction.mobile {
+    position: static;
+    margin: 5% 9%;
+}
+i.icon.icon-direction.mobile {
+    padding: 20px;
+}
+
+@media screen and (max-width: 1023px){
+
+    button.direction.mobile{
+        display: inherit;
+    }
+    button.direction{
+        /*display: none;*/
+    }
+    #details {
+        position: absolute;
+        left: 3%;
+        width: 300px;
+    }
+}
+@media screen and (min-width: 1024px){
+
+    button.direction.mobile{
+        position: absolute;
+        top: -2vh;
+        left: 45vw;
+    }
+    button.direction{
+        display: inherit;
+    }
+}
+@media screen and (min-width: 1024px){
+    button.direction.mobile{
+        position: absolute;
+        top: -2vh;
+        left: 45vw;
+    }
 }
