--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,6 @@ p.blue-text {
     border-bottom: 1px solid #d3d3d3;
 }
 
-
 .alert .close-alert {
     padding: 10px;
     -webkit-appearance: none;
@@ -88,7 +87,6 @@ html, body {
     padding: 0;
 }
 
-
 #details {
     position: absolute;
     left: 22%;
@@ -98,10 +96,12 @@ html, body {
     z-index: 1;
     padding: 0;
 }
+
 #m-0 {
     margin: 0;
 }
-div#m-0{
+
+div#m-0 {
     background-color: #f2f2f2;
 }
 
@@ -114,7 +114,7 @@ div#m-0{
     top: 1%;
     background: #3086e3;
     color: #fff;
-    cursor:pointer;
+    cursor: pointer;
     font-size: 20px;
 }
 
@@ -134,6 +134,7 @@ button {
     background-image: url(../img/marker.png);
     padding: 25px;
 }
+
 .icon-direction {
     background-image: url(../img/direction-icon.png);
     padding: 17px;
@@ -161,6 +162,7 @@ button {
     -o-transition: all 0.5s cubic-bezier(0.55, 0, 0.1, 1);
     /* transition: all 0.5s cubic-bezier(0.55, 0, 0.1, 1); */
 }
+
 .sidebar-nav li {
     position: relative;
     list-style-type: none;
@@ -188,9 +190,15 @@ button {
 }
 
 @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+    .sidenav {
+        padding-top: 15px;
+    }
+
+    .sidenav a {
+        font-size: 18px;
+    }
 }
+
 .sidebar .sidebar-nav li a {
     position: relative;
     cursor: pointer;
@@ -212,65 +220,81 @@ button {
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
+
 .sidebar.open {
     min-width: 280px;
     width: 280px;
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
 }
+
 .sidebar {
     width: 0;
     -webkit-transform: translate3d(-280px, 0, 0);
     transform: translate3d(-280px, 0, 0);
 }
-li{
+
+li {
     margin: 20px;
 }
+
 #m-0 {
-    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
-    box-shadow: 0 0 0 0 rgba(0,0,0,0.14), 0 0 0 0 rgba(0,0,0,0.12), 0 2px 0 -4px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.14), 0 0 0 0 rgba(0, 0, 0, 0.12), 0 2px 0 -4px rgba(0, 0, 0, 0.2);
 }
-div#m-0 {
-    border-bottom: 1px solid #d3d3d3;
-}
+
 /*mobile style*/
 button.direction.mobile {
     position: static;
     margin: 5% 9%;
 }
+
 i.icon.icon-direction.mobile {
     padding: 20px;
 }
 
-@media screen and (max-width: 1023px){
+@media screen and (max-width: 1023px) {
 
-    button.direction.mobile{
+    button.direction.mobile {
         display: inherit;
     }
-    button.direction{
-        /*display: none;*/
-    }
+
     #details {
         position: absolute;
         left: 3%;
         width: 300px;
     }
-}
-@media screen and (min-width: 1024px){
 
-    button.direction.mobile{
+    div#m-0 {
+        border-bottom: 1px solid #d3d3d3;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+
+    button.direction.mobile {
         position: absolute;
         top: -2vh;
         left: 45vw;
     }
-    button.direction{
+
+    button.direction {
         display: inherit;
     }
 }
-@media screen and (min-width: 1024px){
-    button.direction.mobile{
+
+@media screen and (min-width: 1024px) {
+    button.direction.mobile {
         position: absolute;
         top: -2vh;
         left: 45vw;
     }
+}
+
+.close {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    font-size: 20px;
+    color: darkgray;
 }
