--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -4,6 +4,7 @@ body {
   background: #E7E7E7;
   padding: 30px 60px;
 }
+
 /*!* Optional: Makes the sample page fill the window. *!*/
 
 html, body {
@@ -11,6 +12,15 @@ html, body {
   margin: 0;
   padding: 0;
 }
+
+/*variables*/
+$blue-color: #3086e3;
+$gray-color: #838383;
+$gray-rgb: rgba(0, 0, 0, 0.24);
+$darkgay: darkgray;
+$gray-light-rgb: rgba(0, 0, 0, 0.12);
+$gray-light4-rgb: rgba(0, 0, 0, 0.14);
+$gray-light2-rgb: rgba(0, 0, 0, 0.3);
 
 h1 {
   text-align: center;
@@ -26,11 +36,11 @@ h1 {
 
 .alert-success {
   background-color: #f2f2f2;
-  color: #838383;
+  color: $gray-color;
 }
 
 .blue-text {
-  color: #3086e3;
+  color: $blue-color;
 }
 
 #f-s-10 {
@@ -67,20 +77,20 @@ p.blue-text {
   line-height: 1;
   font-weight: bold;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
-  filter: alpha(opacity = 40);
+  filter: alpha(opacity=40);
   opacity: .4;
   &:hover {
-    filter: alpha(opacity = 70);
+    filter: alpha(opacity=70);
     opacity: .7;
   }
 }
 
 .shadow-1, .alert {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 3px $gray-light-rgb, 0 1px 2px $gray-rgb;
 }
 
 .shadow-2, .alert:hover {
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 3px 6px $gray-light-rgb, 0 3px 6px $gray-rgb;
 }
 
 #map {
@@ -113,7 +123,7 @@ div#m-0 {
   height: 50px;
   right: 1%;
   top: 1%;
-  background: #3086e3;
+  background: $blue-color;
   color: #fff;
   cursor: pointer;
   font-size: 20px;
@@ -121,7 +131,7 @@ div#m-0 {
 
 button {
   border: none;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 6px $gray-light2-rgb;
   border-radius: 4px;
 }
 
@@ -162,7 +172,6 @@ button {
   border: none;
   -webkit-transition: all 0.5s cubic-bezier(0.55, 0, 0.1, 1);
   -o-transition: all 0.5s cubic-bezier(0.55, 0, 0.1, 1);
-  /* transition: all 0.5s cubic-bezier(0.55, 0, 0.1, 1); */
 }
 
 .sidebar-nav li {
@@ -210,7 +219,6 @@ button {
     line-height: 48px;
     padding: 0;
     padding-left: 16px;
-    /*padding-right: 56px;*/
     text-decoration: none;
     clear: both;
     font-weight: 500;
@@ -238,8 +246,8 @@ li {
 }
 
 #m-0 {
-  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.14), 0 0 0 0 rgba(0, 0, 0, 0.12), 0 2px 0 -4px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 2px 2px 0 $gray-light4-rgb, 0 1px 5px 0 $gray-light-rgb, 0 3px 1px -2px $gray-light2-rgb;
+  box-shadow: 0 0 0 0 $gray-light4-rgb, 0 0 0 0 $gray-light-rgb, 0 2px 0 -4px $gray-light2-rgb;
 }
 
 /*mobile style*/
@@ -263,7 +271,7 @@ i.icon.icon-direction.mobile {
     width: 300px;
   }
   div#m-0 {
-    border-bottom: 1px solid #d3d3d3;
+    border-bottom: 1px solid $gray-light-rgb;
   }
 }
 
@@ -291,5 +299,5 @@ i.icon.icon-direction.mobile {
   top: 0;
   right: 10px;
   font-size: 20px;
-  color: darkgray;
+  color: $darkgay;
 }
